menu bar changes, taxon browser jumping on search fixes..........

--- a/src/app/right_sidebar.css
+++ b/src/app/right_sidebar.css
@@ -1,9 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,700,700italic,400italic);
 
-#root {
-  max-width: 200px;
-  margin-left: auto;
-  margin-right: auto; }
 
 .Collapsible {
   background-color: white; }
